# memeinder

./: Cargo.toml
src/: main.rs
src/data/: data.toml
