[package]
name = "memender"
version = "0.1.0"
authors = ["subaru-git <subaru1208.m@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cronjob = "0.3.17"
chrono = "0.4.19"
serde = { version = "1.0.125", features = ["derive"] }
toml = "0.5.8"
rand = "0.8.3"
