[package]
name = "memender"
version = "0.1.0"
authors = ["subaru-git <subaru1208.m@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cronjob = "0.3"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.5"
rand = "0.8"
anyhow = "1"
futures = "0.3"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-compat-02 = "*"
clap = "2.33.3"
